Fix z-index

--- a/message_view.css
+++ b/message_view.css
@@ -14,7 +14,7 @@
     opacity: 0;
     transition: opacity .2s;
     box-sizing: border-box;
-    z-index : 1000000;
+    z-index : 10000;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.8), inset -1px -1px rgba(255, 255, 255, 0.2), inset 1px 1px rgba(255, 255, 255, 0.2);
     .font-smoothing(true);
     line-height: 15px;
